Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
0.4.12-dev-361-gda9accfba6e8eb769dcd317185a9b57d161275b7
Description
The left margin of text in status bars regressed lately during 0.4.12-dev.
I use the application Abiword 2.6.8 here, but the effect can also be seen in our taskmgrs status bar.
Expected result
xpsp3.png![]()
2K3_SP2.png![]()
Observed result
0.4.12-dev-822-ge587316_marginMUCHtoolarge.png![]()
0.4.12-dev-8-g958ae44__marginAbitTooLarge.png![]()