[COMCTL32] Improve status bar margin for unthemed and themed CORE-15834

Improve further what was recently committed in
0.4.12-dev-361-g
da9accfba6e8eb769dcd317185a9b57d161275b7